Add padding in footer

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                     <div class="col-md-6 col-lg-2">
                         <div class="about-us text-capitalize mb-5">
                             <h5 class="text-white">about us </h5>
-                            <ul class="list-unstyled  lh-lg">
+                            <ul class="list-unstyled  lh-lg links">
                                 <li>
                                     <a class="text-decoration-none d-block text-white-50 " href="#">
                                         sign
